# quantops-engine

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  config.example.json  package.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
examples/: agent_swarm_example.py  backtesting_example.py  basic_trading.py
quantops/: __init__.py
quantops/api/: app.py
quantops/backtesting/: backtester.py
quantops/config/: settings.py
quantops/core/: engine.py
quantops/exchange/: manager.py
quantops/models/: __init__.py  agent_swarm.py
quantops/strategies/: base.py  momentum.py
quantops/utils/: indicators.py
src/: index.js  placeholder.md
tests/: __init__.py
tests/unit/: test_backtester.py  test_engine.py  test_indicators.py
