[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantops-engine"
version = "0.1.0"
description = "Algorithmic Liquidity & Quantitative Strategy Engine"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "REDDNoC"}]
requires-python = ">=3.8"
keywords = ["quant", "liquidity", "trading", "backtesting", "ccxt", "ai-trading"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
